Updated the logging, to display in the correct local time.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
             - "5070:5070"
         depends_on:
             - postgres
+        environment:
+            - TZ=America/New_York
     next:
         image: node:latest
         volumes:
